fix: image scaling on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -78,6 +78,7 @@ header {
 	}
 
 	#logo {
-		width: 30vw;
+		width: 35vw;
+		height: 35vw;
 	}
 }
